# FiniteFrameFinder_Z3

./: .gitignore  .gitmodules  CMakeLists.txt  result_1_20.txt  result_4_16.txt
src/: example_groups.cpp  main.cpp  minimal_example.cpp  test.cpp
